# aws-security-reference-architecture-examples

./: .flake8  .gitattributes  .gitignore  .markdownlint.json  .safety-policy.json  .safetyci.yml  AWS-SRA-KEY-INFO.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS  GENERAL-CONTRIBUTING-GUIDANCE.md  LICENSE-SUMMARY  README.md  pyproject.toml  requirements-safety.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  feature_request.md  general-guidance.md  guidance.md
.github/workflows/: bandit.yml  cfn-nag.yml  checkov.yml  markdown-links.yml  pylic.yml  python-license-check.yml  safety-updated.yml  safety.yml  static-checking.yml
aws_sra_examples/docs/: CFCT-DEPLOYMENT-INSTRUCTIONS.md  DEPLOYMENT-METHODS.md  DOWNLOAD-AND-STAGE-SOLUTIONS.md
aws_sra_examples/docs/artifacts/: where-to-start-process.pptx
aws_sra_examples/easy_setup/: README.md
aws_sra_examples/easy_setup/assets/: sra-easy-setup-architecture.vsdx
aws_sra_examples/easy_setup/customizations_for_aws_control_tower/: README.md  manifest.yaml
aws_sra_examples/easy_setup/templates/: sra-easy-setup.yaml
aws_sra_examples/modules/cloudtrail-org-module/templates/: sra-cloudtrail-org-module-main.yaml  sra-cloudtrail-org-solution.yaml
aws_sra_examples/modules/config-org-module/templates/: sra-config-org-module-main.yaml  sra-config-org-solution.yaml
aws_sra_examples/modules/guardduty-org-module/src/: inline-lambda-check-common-prereq.py  inline-lambda.py
aws_sra_examples/modules/guardduty-org-module/templates/: sra-guardduty-org-module-main.yaml  sra-guardduty-org-solution.yaml  test.yaml
aws_sra_examples/modules/securityhub-org-module/src/: inline-lambda-check-common-prereq.py  inline-lambda-get-outputs.py  inline-lambda-start-codebuild.py  inline-lambda.py
aws_sra_examples/modules/securityhub-org-module/templates/: securityhub-org-module-main.yaml  sra-securityhub-org-module-main.yaml  sra-securityhub-org-solution.yaml
aws_sra_examples/quick_setup/: README.md
aws_sra_examples/quick_setup/customizations_for_aws_control_tower/: manifest-v2.yaml
aws_sra_examples/quick_setup/documentation/: quick-setup.pptx
aws_sra_examples/quick_setup/templates/: sra-quick-setup-ssm.yaml
aws_sra_examples/solutions/: README.md
aws_sra_examples/solutions/account/account_alternate_contacts/: README.md
aws_sra_examples/solutions/ami_bakery/ami_bakery_org/: README.md
aws_sra_examples/solutions/cloudtrail/cloudtrail_org/: README.md
aws_sra_examples/solutions/common/common_cfct_setup/: README.md
aws_sra_examples/solutions/common/common_prerequisites/: README.md
aws_sra_examples/solutions/common/common_register_delegated_administrator/: README.md
aws_sra_examples/solutions/config/config_aggregator_org/: README.md
aws_sra_examples/solutions/config/config_conformance_pack_org/: README.md
aws_sra_examples/solutions/config/config_management_account/: README.md
aws_sra_examples/solutions/config/config_org/: README.md
aws_sra_examples/solutions/detective/detective_org/: README.md
aws_sra_examples/solutions/ec2/ec2_default_ebs_encryption/: README.md
aws_sra_examples/solutions/firewall_manager/firewall_manager_org/: README.md
aws_sra_examples/solutions/genai/: README.md
aws_sra_examples/solutions/genai/bedrock_guardrails/: README.md
aws_sra_examples/solutions/genai/bedrock_org/: README.md
aws_sra_examples/solutions/genai/sra_guardduty_malware_protection_for_s3/: README.md
aws_sra_examples/solutions/guardduty/guardduty_malware_protection_for_s3/: README.md
aws_sra_examples/solutions/guardduty/guardduty_org/: README.md
aws_sra_examples/solutions/iam/iam_access_analyzer/: README.md
aws_sra_examples/solutions/iam/iam_password_policy/: README.md
aws_sra_examples/solutions/iam/iam_password_policy_acct/: README.md
aws_sra_examples/solutions/inspector/inspector_org/: README.md
aws_sra_examples/solutions/macie/macie_org/: README.md
aws_sra_examples/solutions/patch_mgmt/: README.md  deploy_sra_via_cloudformation.yml
aws_sra_examples/solutions/patch_mgmt/patch_mgmt_org/: README.md
aws_sra_examples/solutions/patch_mgmt/templates/: sra-patch_mgmt-configuration-role.yaml  sra-patch_mgmt-configuration.yaml  sra-patch_mgmt-org-main-ssm.yaml
aws_sra_examples/solutions/s3/s3_block_account_public_access/: README.md
aws_sra_examples/solutions/security_lake/security_lake_org/: README.md
aws_sra_examples/solutions/securityhub/securityhub_org/: README.md
aws_sra_examples/terraform/: AmazonQ.md  README.md
aws_sra_examples/terraform/common/: README-TF.MD  README.md  data.tf  main.tf  outputs.tf  providers.tf  variables.tf
aws_sra_examples/terraform/solutions/: README-TF.MD  README.md  main.tf  providers.tf  terraform_stack.py  variables.tf
aws_sra_examples/utils/: __init__.py  lambda-s3-buckets.yaml
aws_sra_examples/utils/packaging_scripts/: README.md  package-lambda.sh  sra-prepare-layer-code.py  stage_solution.sh
extras/: lambda-s3-buckets.yaml
extras/aws-control-tower/helper-scripts/: list-config-recorder-status.py
extras/aws-control-tower/prerequisites/: README.md  prereq-controltower-execution-role.yaml  prereq-lambda-s3-bucket.yaml  prereq-ssm-account-params.yaml
extras/aws-landing-zone-configuration/: README.md  manifest.yaml
extras/aws-landing-zone-configuration/policies/: aws-landing-zone-core-mandatory-preventive-guardrails.json  aws-landing-zone-non-core-mandatory-preventive-guardrails.json
extras/packaging-scripts/: package-lambda.sh
solutions/: README.md
solutions/cloudtrail/cloudtrail-org/: README.md
solutions/common/register-delegated-administrator/: README.md
solutions/config/aggregator-acct/: README.md
solutions/config/aggregator-org/: README.md
solutions/config/conformance-pack-org/: README.md
solutions/firewall-manager/firewall-manager-org/: README.md
solutions/guardduty/guardduty-org/: README.md
solutions/iam/access-analyzer/: README.md
solutions/iam/password-policy-acct/: README.md
solutions/macie/macie-org/: README.md
solutions/securityhub/securityhub-enabler-acct/: README.md
(+725 files in other folders)
